# optimizer

./: .bazelrc  .clang-tidy  .gitignore  BUILD  BUILD.bazel  LICENSE  README.md  WORKSPACE
.github/workflows/: main.yml
bazel/: rules.bzl
configuration/: configure.bzl  defs.bzl.tpl
doxygen/: Doxyfile
src/: concepts.hpp  convopt.hpp  dualnumbers.hpp  lineq_solvers.hpp  main.cpp  math.hpp  matrix.hpp  matrix_factorizations.hpp  matrix_ops.hpp  norm.hpp  norms.hpp  spaces.hpp  spaces_ops.hpp
src/convopt/: BUILD  BUILD.bazel  convopt.cpp  convopt.h  convopt.hpp
src/convopt/test/: BUILD  BUILD.bazel  convopt_test.cc  convopt_test.cpp
src/dualnumbers/: BUILD  BUILD.bazel  dualnumbers.cpp  dualnumbers.h  dualnumbers.hpp  math.h  math.hpp
src/dualnumbers/test/: BUILD  BUILD.bazel  dualnumbers_test.cc  dualnumbers_test.cpp
src/impl/: base_fn.hpp  series.hpp
src/spaces/: BUILD  BUILD.bazel  spaces.cpp  spaces.h  spaces.hpp
src/spaces/test/: BUILD  BUILD.bazel  spaces_test.cc  spaces_test.cpp
src/stdx/: traits.hpp
test/: BUILD  convopt_test.cpp  dualnumbers_test.cpp  lineq_solvers_test.cpp  math_test.cpp  matrix_ops_test.cpp  matrix_test.cpp  norms_test.cpp  spaces_ops_test.cpp  spaces_test.cpp  stdx_traits_test.cpp
toolchain/: BUILD.bazel  cc_toolchain_config.bzl
